src/test/deca/syntax/valid/chaine_vide.deca
// Description:
//   Chaine vide
//
// Resultats:
//    
//

{
        println("");
}
