src/test/deca/syntax/invalid/provided/println_incomplete.deca
// Description:
//   println icomplet: sans parenthèse


{
        println(;
}
